@@ -43,6 +43,9 @@ dpkg (1.17.7) UNRELEASED; urgency=low
   * If the vendor does not have a Dpkg::Vendor module, try loading a module
     from the parent vendors, before falling back to Dpkg::Vendor::Default.
     Closes: #735978
+  * Set Ubuntu build flags for ppc64el instead of ppc64, as Ubuntu never ended
+    up shipping a ppc64 architecture. Also honor noopt DEB_BUILD_OPTIONS flag.
+    Thanks to Adam Conrad <adconrad@debian.org. Closes: #738691
 
   [ Updated dpkg translations ]
   * German (Sven Joachim).
